--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "6to5": "^3.5.3",
     "csv-parse": "0.0.6",
-    "csv-stringify": "0.0.6",
-    "path": "^0.11.14"
+    "csv-stringify": "0.0.6"
   }
 }
